--- a/static/app.css
+++ b/static/app.css
@@ -14,6 +14,12 @@ input[type="text"] {      background: transparent;
     margin-left: 26%;
 }
 
+a.more{
+    color: #1a0dab;
+    font-size: 20px;
+    text-decoration: underline;
+}
+
 h1{
     margin: 1em 0 0.5em 0;
     color: green;
