--- a/templates/searchHome.html
+++ b/templates/searchHome.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>UCI Domain Search</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link  rel="stylesheet" href="{{ url_for('static', filename='app.css') }}"/>
   </head>
   <body>
@@ -13,9 +14,13 @@
 	    	<button>Search</button>    	
 	    </form>
 	    <div>
+	    	<a class="more" onclick="javascript:$('.moreResults').toggle()"><< Show Hidden >></a>
+	    	<br/>
+	    	<p>** Lists max 4 links per domain. Click above link to see more from the domain.</p>
+
     		{% for doc in data %}
     		{% if doc != 'searchText' %}
-    		<h3>
+    		<h3 {% if data|length >= 21 and data[doc].hidden == True %} class="moreResults" style="display:none" {% endif %}>
     			<a href={{data[doc].url}} target="_blank">
     			   {{data[doc].title}}
     		    </a>
